--- a/styles.css
+++ b/styles.css
@@ -1,38 +1,125 @@
-header {
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Just+Me+Again+Down+Here&display=swap');
+
+* {
+    box-sizing: border-box;
+}
+
+div{
+    display: block;
+}
+
+body{
+    background-color: #181818;
+}
+
+hr {
+    height: 1px;
+    border-width: 0;
+    color: #C1C1C1;
+    background-color: #C1C1C1;
+}
+/*Top Image*/
+header{
     display: flex;
     justify-content: flex-end;
     align-items: center;
     padding: 25px 3%;
-    background-color: #181818;
 }
 
 .text-header{
     width: auto;
     height: 100%;
     text-align: center;
+    padding-right: 10%;
 }
 
-.nav_links {
+/*Nav Bar*/
+.nav_links{
     list-style: none;
     display: flex;
-    height: 10px;
 }
-  
-.nav_links a {
-    font-family: "Montserrat", sans-serif;
-    font-weight: 500;
-    color: #edf0f1;
-    text-decoration: none;
-}
-  
-.nav_links li {
+
+.nav_links li{
     padding: 0px 20px;
 }
-  
-.nav_links li a {
+
+.nav_links li a{
     transition: all 0.3s ease 0s;
 }
-  
-.nav_links li a:hover {
-    color: #08FDD8;
+
+.nav_links a{
+    font-family: "Montserrat", sans-serif;
+    font-weight: 500;
+    color: #e6e6e6;
+    text-decoration: none;
+}
+
+.nav_links li a:hover{
+    color: #FBD564;
+}
+
+/*Content*/
+.column{
+    float: left;
+    height: 100%;
+}
+
+.left{
+    width: 70%;
+    background-color: #232628;  
+    font-family: "calibri";
+    padding-left: 30px;
+    padding-right: 30px;
+}
+
+.left h1{
+    color: #C1C1C1;
+    font-weight: lighter;
+}
+
+.left p{
+    color: #DFDFDF;
+    font-size: 18px;
+    font-weight: 400;
+    padding-top: 10px;
+    font-family: 'Outfit';
+}
+
+figcaption{
+    text-align: center;
+    color: #e6e6e6;
+    padding-top: 10px;
+}
+
+.leftimg{
+    padding-left: 20%;
+    font-family: 'Outfit';
+}
+
+.right{
+    width: 30%;
+    background-color: #444748;
+    font-family: "calibri";
+    padding-left: 30px;
+    padding-right: 30px;
+}
+
+.right h1{
+    color: #C1C1C1;
+    font-weight: lighter;
+}
+
+table{
+    width: 100%;
+}
+
+.QText{
+    font-family: 'Just Me Again Down Here', cursive;
+    font-size: 35px;
+    text-align: center;
+}
+
+.Qimg{
+    padding-left: 25%;
 }
